<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logonf"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:src="@drawable/sttnf"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/nama"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logonf"/>

    <TextView
        android:id="@+id/ttl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:text="@string/ttl"
        android:layout_below="@+id/nama"/>

    <TextView
        android:id="@+id/prodi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:text="@string/prodi"
        android:layout_below="@+id/ttl"/>

    <TextView
        android:id="@+id/nim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:text="@string/nim"
        android:layout_below="@+id/prodi"/>

    <TextView
        android:id="@+id/kampus"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/kampus"
        android:layout_below="@+id/nim"/>



</RelativeLayout>