<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:padding="16dp">

    <TextView
        android:id="@+id/txt_detail_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/juduldoa"
        android:textSize="18sp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/txt_detail_ayat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/ayatdoa"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/txt_detail_arti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/artidoa"
        android:layout_gravity="center"/>

</LinearLayout>
