<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/mosque">

    <TextView
        android:id="@+id/salam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salam"
        android:layout_marginStart="45dp"
        android:layout_marginTop="60dp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hai"
        android:layout_below="@+id/salam"
        android:layout_marginStart="45dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jadwal"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:textColor="@color/colorPrimaryDark"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/lst_jadwal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>